[package]
name = "timekeeper-rs"
version = "0.1.0"
edition = "2021"
authors = ["Fadi Asfour <fadi@asfourconsulting.com>"]
homepage = "https://github.com/asfourco/timekeeper-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = { version = "4.4.2", features = ["derive"] }
num-format = "0.4.4"


[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name="timekeeper"
path="src/main.rs"
